@@ -2,9 +2,11 @@ DIST bleachbit-0.8.0.tar.bz2 213125 RMD160 f499759c01ebb65f10c2eb958cb1efe7d4bd4
 DIST bleachbit-0.8.2.tar.bz2 233854 RMD160 4b7ce9402a4493529d1beedbcf96e74e5f3b7856 SHA1 06de0959599a4b763399b1fcdc9ec90774e5d281 SHA256 6da75744e347d16120e92519c5634be228aead51b17e295568a2cd819cebd970
 DIST bleachbit-0.8.4.tar.bz2 240781 RMD160 e56d157cd3b3323ed2ac8bf004e718a925b6136f SHA1 618293a9d928a298c8aa9a7519299c892a8c9b6a SHA256 32f6d185573e05e1cfc43dc7e3a441115f6960937cb7c1d2444af980a54a9601
 DIST bleachbit-0.8.5.tar.bz2 257225 RMD160 21553944a4079d2b9676d518107309a8418008dd SHA1 5febbbedba99c6b40ecaecc69ef8d5c339c3ae31 SHA256 ef27467e1839a90e9957fe62365c5e64448789d3a4af1a65fb871882bf01b4ce
+DIST bleachbit-0.8.6.tar.bz2 258851 RMD160 0536846eaf713e6912ed78b9cd65b730f2539ad8 SHA1 0c5c279e4a3724fd40dbf420575543f02be19508 SHA256 c0d2455659234cb187bf5e958e5c13e9f19ba154afc26681e8ae5d236f6e6531
 EBUILD bleachbit-0.8.0.ebuild 845 RMD160 3260de32fb2f689127c7e475dbf8098da702e1bd SHA1 1a415c60b3976348cc944f0abd5f9e714c24a66f SHA256 99048009b57c2cf10969d46cc82cc597a6e1eeffb4a885543f691bf4fb5eac08
 EBUILD bleachbit-0.8.2.ebuild 845 RMD160 3260de32fb2f689127c7e475dbf8098da702e1bd SHA1 1a415c60b3976348cc944f0abd5f9e714c24a66f SHA256 99048009b57c2cf10969d46cc82cc597a6e1eeffb4a885543f691bf4fb5eac08
 EBUILD bleachbit-0.8.4.ebuild 845 RMD160 3260de32fb2f689127c7e475dbf8098da702e1bd SHA1 1a415c60b3976348cc944f0abd5f9e714c24a66f SHA256 99048009b57c2cf10969d46cc82cc597a6e1eeffb4a885543f691bf4fb5eac08
 EBUILD bleachbit-0.8.5.ebuild 845 RMD160 3260de32fb2f689127c7e475dbf8098da702e1bd SHA1 1a415c60b3976348cc944f0abd5f9e714c24a66f SHA256 99048009b57c2cf10969d46cc82cc597a6e1eeffb4a885543f691bf4fb5eac08
-MISC ChangeLog 1644 RMD160 f157ca1421d8f70ea43dfd7dd239cab7bfba71f4 SHA1 5fcf6530197f00f333d575224dcd7ecff605f1fb SHA256 d270c09dfbda319a0abe67ed4568595dfced2382bc76584a6e480c0371cd40fc
+EBUILD bleachbit-0.8.6.ebuild 845 RMD160 3260de32fb2f689127c7e475dbf8098da702e1bd SHA1 1a415c60b3976348cc944f0abd5f9e714c24a66f SHA256 99048009b57c2cf10969d46cc82cc597a6e1eeffb4a885543f691bf4fb5eac08
+MISC ChangeLog 1761 RMD160 0c590fd15b636bfaf6c784349269cb55b689c253 SHA1 8e0e52297fa74a92ea63a3aed67614b66172ca84 SHA256 3898620541ec458385661d12551ad8c9813e957b495296a61700d5a9bf4756fa
 MISC metadata.xml 247 RMD160 7b4c6f35a51e12dc64a4a0227afcea9c11d151cd SHA1 b734a21f0e6ffa7d636add4d86df0dbeaf4f66c8 SHA256 fec8cc68d7128d2dc08a823865caf6a480f76da53996c37d29c914bc9dc06496
