@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*bleachbit-0.8.6 (04 Jan 2011)
+
+  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.8.6.ebuild:
+  Bumped.
+
 *bleachbit-0.8.5 (02 Jan 2011)
 
   02 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +bleachbit-0.8.5.ebuild:
